# Wifi-QR-Code-Generator

./: Cargo.toml  Readme.md  deny.toml
src/: lib.rs  main.rs
