[package]
name = "wifi-qr-code-generator"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Skgland/Wifi-QR-Code-Generator"
readme = "Readme.md"
keywords = ["cli", "wifi", "wlan", "qr-code"]
categories = ["command-line-utilities"]
description = "A small CLI Utility for generating Wifi QR-Codes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "wifi-qr-code-generator"
required-features=["cli"]

[features]
default = ["qoi"]
cli = ["dep:clap"]
qoi = ["dep:arqoii"]

[dev-dependencies]
proptest = "1.2.0"

[dependencies]
qrcode = "0.12.0"
image = "0.24.7"
thiserror = "1.0.48"
base64 = "0.21.4"
clap = {version = "4.4.4", features = ["derive", "string"] , optional = true }
arqoii = { version ="0.2.0" , optional = true }
